// Skynet 公共定义
// 被其他 Skynet proto 文件引用

syntax = "proto3";
package skynet_proto;

// ==================== 玩家数据结构 ====================

// 玩家基础数据
message PlayerData {
    string player_id = 1;
    string nickname = 2;
    int32 level = 3;
    int32 exp = 4;
    int32 gold = 5;
    int64 last_login = 6;
    int64 create_time = 7;
}

// ==================== 通用响应 ====================

message CommonResponse {
    bool success = 1;
    string message = 2;
    int32 error_code = 3;
}

// ==================== 错误码定义 ====================

enum ErrorCode {
    OK = 0;
    UNKNOWN_ERROR = 1;
    INVALID_PARAM = 2;
    NOT_FOUND = 3;
    ALREADY_EXISTS = 4;
    PERMISSION_DENIED = 5;
    TIMEOUT = 6;
    SERVICE_UNAVAILABLE = 7;
    
    // 玩家相关 (100-199)
    PLAYER_NOT_FOUND = 100;
    PLAYER_NOT_ONLINE = 101;
    INVALID_TOKEN = 103;
    
    // 数据库相关 (200-299)
    DB_ERROR = 200;
    DB_NOT_FOUND = 201;
    DB_DUPLICATE = 202;
}
